# fafse

./: CMakeLists.txt  main.c  sum.c
libs/: CMakeLists.txt
libs/algoritms/: CMakeLists.txt  algoritms.h
libs/string/: string_.c  string_.h
libs/structures/: CMakeLists.txt  structures.h
libs/structures/matrix/: CMakeLists.txt  matrix.c  matrix.h
libs/structures/vector/: CMakeLists.txt  vector.c  vector.h
