cmake_minimum_required(VERSION 3.23)
project(untitled2 C)

set(CMAKE_C_STANDARD 99)

add_executable(untitled2 main.c libs/algoritms/aloritms.c libs/algoritms/algoritms.h libs/string/string_.c libs/string/string_.h libs/structures/structures.c libs/structures/structures.h libs/structures/matrix/matrix.c libs/structures/matrix/matrix.h libs/structures/vector/vector.c libs/structures/vector/vector.h ../untitled4/sum.c 01.c)
